<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/advertisementFragment"
        android:icon="@drawable/home_icon"
        android:title="" />
    <item
        android:id="@+id/accountContainerFragment"
        android:icon="@drawable/account_icon"
        android:title="" />
</menu>