<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/accountFragment">
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.sovchilar.made.presentation.fragments.view.AccountFragment"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_accountFragment_to_addFragment"
            app:destination="@id/addFragment"
            app:popUpTo="@id/accountFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.sovchilar.made.presentation.fragments.view.AddFragment"
        tools:layout="@layout/fragment_add" />

</navigation>